fix the modal close button being too dark

--- a/src/scss/_modules/_variables.scss
+++ b/src/scss/_modules/_variables.scss
@@ -12,6 +12,7 @@ $font-family-sans-serif: system-ui, -apple-system, "Segoe UI", roboto,
   "Helvetica Neue", arial, "Noto Sans", "Liberation Sans", sans-serif,
   "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $input-bg: #fff;
+$btn-close-color: #fff;
 
 /*! Bootstrap */
 
